Chronological listing of changes. More detail is usually found in the Git commit messages
and/or the pull requests.

2013-12-04

* Added implementation for Apple-interal NSIsKind informal protocol (Brian Gerstle)


2013-11-08

* Various fixes for method with structure returns (Carl Lindberg)


2013-08-27

* Added a specially typed method for object references to OCMArg.


2013-08-17

* Fixed bug that caused matching to be aborted on first ignored non-object arg.


2013-08-10

* Fixed a bug where partial mocks wouldn't clean up mocked class methods. (we7teck)


2013-07-30

* Improved value macro so it can take constant arguments and expressions. (Carl
  Lindberg)
* Fixed a bug that caused crashes when methods that require "special" struct returns
  were mocked in partial mocks. (Carl Lindberg)


2013-07-15

* Fixed several bugs regarding class method mocking in class hierarchies.


2013-07-03

* Fixed bug preventing the same class method to be expected more than once.


2013-07-02

* Can ignore non-object arguments on a per-invocation basis.
* Added constraint for any selector.


2013-06-19

* Constraints implement NSCopying for OS X 10.9 SDK compatibility.


2013-03-14

* Stubbing an object creation method now handles retain count correctly.
* Added support for forwardingTagetForSelector: (thanks to Jeff Watkins)


2013-03-12

* Added class method mocking capability to class mock objects
* Added implementation of isKindOfClass: to class mock objects


2013-02-20

* Allowing to set non-object pass-by-ref args (thanks to Glenn L. Austin)


2012-08-23

* Calling a previously expected method on a partial mock is no longer an error.


2012-01-23

* Avoiding deprecated method to convert to a C string (thanks to Kushal Pisavadia)


2011-11-03

* Recreated project from scratch with new conventions in Xcode 4.2 (thanks to Matt Di Pasquale)


2011-09-26 

* Arguments only need to be equal, don't have to have same class


