@@ -1,6 +1,10 @@
 Chronological listing of changes. More detail is usually found in the Git commit messages
 and/or the pull requests.
 
+2014-01-16
+
+* Extended OCMockObject with verifyWithDelay (Charles Harley, Daniel Doubrovkine)
+
 2013-12-04
 
 * Added implementation for Apple-interal NSIsKind informal protocol (Brian Gerstle)
